# agent-swarm

./: .coderabbit.yaml  .env.example  .gitignore  .push-defaults  AGENTS.md  Containerfile  Makefile  README.md  install-agent-swarm.md  requirements.txt
.audit/: approved-plan.md
docs/: ARCHITECTURE.md  OPENSHELL_LOCAL_SETUP.md  USER_GUIDE.md
k8s/: kind-config.yaml
kustomize/: README.md
mcp-server/: README.md  pyproject.toml
mcp-server/agent_swarm_mcp_server/: __init__.py  auth.py  client.py  config.py  main.py  server.py
mcp-server/tests/: conftest.py  test_auth.py  test_client.py  test_server.py
openshell_proto/: datamodel_pb2.py  datamodel_pb2_grpc.py  inference_pb2.py  inference_pb2_grpc.py  openshell_pb2.py  openshell_pb2_grpc.py  sandbox_pb2.py  sandbox_pb2_grpc.py
plans/: 2026-04-14-01-foundation.md  2026-04-14-02-workspaces.md  2026-04-14-03-secrets.md  2026-04-14-04-sessions.md  2026-04-14-05-pull-secret-tab.md  2026-04-14-06-ui-tui-improvements.md  2026-04-14-07-model-id-fixes.md  2026-04-15-08-fix-pat-form-action-url.md  2026-04-15-08-multi-agent-tool-architecture.md  2026-04-15-09-context-repositories-prompt-injection.md  2026-04-15-09-execution-plan.md  2026-04-15-10-repo-list-local-path-layout.md  2026-04-15-11-language-image-selector.md  2026-04-15-12-fix-image-reachability-check.md  2026-04-17-14-agent-launch-buttons.md  2026-04-17-15-config-autosave.md  2026-04-19-16-last-output-panel-fix.md  2026-04-20-k8s-token-auth.md  2026-04-21-coderabbit-fixes.md  2026-04-22-session-launch-ui-refactor.md  2026-04-23-ansi-color-output.md  INDEX.md  (+8 more)
(+135 files in other folders)
