[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-swarm-mcp-server"
version = "0.1.0"
description = "MCP server for AI-driven Agent Swarm session orchestration"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
agent-swarm-mcp-server = "agent_swarm_mcp_server.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
