[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-swarm-mcp-server"
version = "0.1.0"
description = "MCP server for AI-driven Agent Swarm session orchestration"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "starlette>=1.2.1",
]

[project.scripts]
agent-swarm-mcp-server = "agent_swarm_mcp_server.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
